# CodeExamples

Algorithms/Peschatskii_Semen_cw/: Peschatskii_Semen_cw.docx
Algorithms/Peschatskii_Semen_lb1/: Pechatskii_Semen_lb1.docx
Algorithms/Peschatskii_Semen_lb2/: Peschatskii_Semen_lb2.docx
Algorithms/Peschatskii_Semen_lb3/: Peschatskii_Semen_lb3.docx
Algorithms/Peschatskii_Semen_lb4/: Peschatskii_Semen_lb4.docx
OOP/: Barrage.cpp  Barrage.h  CMakeLists.txt  Command.h  ConsoleIn.cpp  ConsoleIn.h  ConsoleOut.cpp  ConsoleOut.h  DoubleDamage.cpp  DoubleDamage.h  FileInteractionError.cpp  FileInteractionError.h  Game.cpp  Game.h  GameContr.cpp  GameContr.h  GameState.cpp  GameState.h  ImproperShipPlacement.cpp  ImproperShipPlacement.h  Manager.cpp  Manager.h  Map.cpp  Map.h  NoSpells.cpp  NoSpells.h  Peschatskii_Semen_lb2.docx  Peschatskii_Semen_lb4.docx  Scanner.cpp  Scanner.h  Settings.txt  Ship.cpp  Ship.h  ShipInfo.cpp  ShipInfo.h  ShotOOB.cpp  ShotOOB.h  Spell.h  SpellBook.cpp  Spellbook.h  (+5 more)
PIAA/Ахо-Корасик/: Peschatskii_Semen_lb5.docx  main.cpp
PIAA/КМП/: Peschatskii_Semen_lb4.docx  main.cpp
PIAA/Коммивояжер/: Peschatskii_Semen_lb2.docx  main.cpp
PIAA/Левенштейн/: Peschatskii_Semen_lb3.docx  main.cpp
PIAA/Поиск с возрвратом/: Peschatskii_Semen_lb1.docx  main.cpp
Палгосы/taks_2/: Peschatskii_Semen_lb2.docx  graphs.py  main.cpp
Палгосы/task_1/: Peschatskii_Semen_lb1.docx  graphs.cpp  main.cpp
Палгосы/task_3/: Peschatskii_Semen_lb3.docx  Sorter.cpp  Strassen.cpp  graphics.py  main.cpp
Палгосы/task_4/: Matrix.cpp  Multi.cpp  Peschatskii_Semen_lb4.docx  (+3 more)
(+22 files in other folders)
